# mapper-influences-backend-rs

./: .env.example  .gitignore  .surrealdb  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
migrations/events/: add_influence.surql  add_influence_beatmap.surql  add_user_beatmap.surql  edit_bio.surql  edit_influence_description.surql  edit_influence_type.surql  remove_influence.surql  remove_influence_beatmap.surql  remove_user_beatmap.surql
migrations/migrations/definitions/: _initial.json
migrations/schemas/: activity_preference.surql  functions.surql  influenced_by.surql  user.surql
src/: conversion.rs  custom_cache.rs  daily_update.rs  discord_webhook.rs  documentation.rs  elements-ui.html  error.rs  graph-2d.html  graph-3d.html  jwt.rs  lib.rs  main.rs  osu_api.rs  retry.rs  schema_with.rs  user_import.rs
src/database/: activity.rs  graph_vizualizer.rs  influence.rs  leaderboard.rs  mod.rs  user.rs
src/handlers/: activity.rs  auth.rs  graph_vizualizer.rs  influence.rs  leaderboard.rs  mod.rs  og.rs  osu_api.rs  osu_search.rs  user.rs
src/osu_api/: cached_requester.rs  credentials_grant.rs  mod.rs  request.rs
tests/: leaderboard.rs  user.rs
tests/common/: mod.rs  osu_test_client.rs
tests/data/: BeatmapLeaderboard  UserBeatmapAdd
