[package]
default-run = "main"
edition = "2021"
name = "mapper-influences-backend-rs"
version = "0.1.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "convert"
path = "src/conversion.rs"

[dependencies]
aide = { version = "0.13.4", features = ["axum", "axum-extra", "macros"] }
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
cached = { version = "0.53.1", features = ["async"] }
dotenvy = "0.15.7"
hashlink = "0.9.1"
http = "1.1.0"
jwt-simple = { version = "0.12.10", default-features = false, features = [
    "pure-rust",
] }
ordermap = { version = "0.5.3", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
schemars = "0.8.21"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
surrealdb = "2.0.3"
surrealdb-migrations = "2.0.0"
thiserror = { version = "1.0.64" }
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
