[package]
default-run = "mapper-influences-backend"
edition = "2021"
name = "mapper-influences-backend-rs"
version = "0.1.0"

[[bin]]
name = "mapper-influences-backend"
path = "src/main.rs"

[dependencies]
aide = { version = "0.13", features = ["axum", "axum-extra", "macros"] }
argon2 = "0.5"
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9.4", features = ["cookie"] }
axum-swagger-ui = "0.3.0"
bytes = { version = "1.8.0", features = ["serde"] }
cached = { version = "0.53.1", features = ["async"] }
chrono = "0.4.38"
dotenvy = "0.15.7"
futures = "0.3.31"
hashlink = { version = "0.9.1", features = ["serde", "serde_impl"] }
http = "1.1.0"
itertools = "0.13.0"
jwt-simple = { version = "0.12.10", default-features = false, features = [
    "pure-rust",
] }
rand_core = "0.6"
reqwest = { version = "0.12", features = ["json"] }
schemars = { version = "0.8.16", features = ["chrono"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
surrealdb = "2.1.0"
surrealdb-migrations = "2.0.0"
thiserror = { version = "1.0.64" }
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.6.1", features = [
    "compression-full",
    "cors",
    "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[patch.crates-io]
serde = { git = "https://github.com/frederik-uni/serde" }

[dev-dependencies]
axum-test = { version = "16.4.0", features = ["ws"] }
flate2 = "1.0"
testcontainers-modules = { version = "0.11.4", features = ["surrealdb"] }
uuid = "1.11"
